# AeroMind-DAG-Architect

./: .env  .gitignore  README.md  app.py  client.py  context.py  docker-compose.yml  docker_manager.py  langgraph_setup.py  main.py  pyproject.toml  requirements.txt  tools.py
dags/: .gitkeep  generated_dag.py  generated_dag_-2353953.py  generated_dag_-2524768.py  generated_dag_-5738976.py  generated_dag_-7785910.py  generated_dag_0.py  generated_dag_48025388.py  generated_dag_66958874.py  generated_dag_78676592.py
src/: __init__.py
src/agents/: __init__.py  tools.py  workflow.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  context.py  docker_manager.py
src/services/: __init__.py  dag_generator.py
