[project]
name = "aeromind-dag-architect"
version = "0.1.0"
description = "An intelligent AI agent system for automatically generating, deploying, and testing Apache Airflow DAGs from natural language requirements"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0,<2.0.0",
    "numpy>=1.21.0,<1.25.0",
    "google-generativeai>=0.4.0,<0.5.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-google-genai>=0.2.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "docker>=6.0.0,<8.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "rich>=13.0.0,<14.0.0",
    "typer>=0.9.0,<1.0.0",
]
